--- a/app/assets/sass/v-progress-bar.scss
+++ b/app/assets/sass/v-progress-bar.scss
@@ -11,10 +11,10 @@
     .hearing {
 
       .leg {
-        width: 4px;
+        width: 6px;
         height: 30px;
-        background-color: $grey-2;
-        margin-left: 13px;
+        border-left: 6px solid $green;
+        margin-left: 15px;
       }
 
       .ring {
@@ -22,39 +22,33 @@
         position: relative;
         z-index: 1;
         border-radius: 50%;
-        border: 3px solid $green;
+        border: 6px solid $green;
         width: 24px;
         height: 24px;
       }
 
-      .fa-check {
+      .tick {
         display: none;
       }
 
       &.active {
         .ring {
           background-color: $green;
-          span {
-            display: none;
-          }
         }
-        .leg {
-          background-color: $green;
-        }
-        .fa-check {
-          top: 2px;
-          left: 2px;
+        .tick {
+          top: 3px;
+          left: 1px;
+          width: 20px;
+          height: auto;
           display: block;
           position: absolute;
-          color: white;
-          font-size: 20px;
         }
       }
 
       h4 {
         float: left;
-        margin-left: 40px;
-        margin-top: -23px;
+        margin-left: 45px;
+        margin-top: -27px;
         &.current {
           font-weight: bold;
         }
